hphp/hack/test/typecheck/await_as_an_expression/await_as_an_expression_void_return.php.like_types.exp
File "await_as_an_expression_void_return.php", line 6, characters 10-21:
Invalid return type (Typing[4110])
File "await_as_an_expression_void_return.php", line 5, characters 33-36:
Expected void
File "await_as_an_expression_void_return.php", line 6, characters 10-21:
But got dynamic
