hphp/hack/test/typecheck/await_as_an_expression/await_as_an_expression_void_return.php
<?hh // strict

async function genx(): Awaitable<void> {}

async function foo(): Awaitable<void> {
  return await genx();
}
